clear cache feature
